NSAttributedString conversion in a loop returns nil and WKUnknownError every other time. https://bugs.webkit.org/show_bug.cgi?id=197523

Reviewed by Darin Adler.

Source/WebCore:

* editing/cocoa/HTMLConverter.mm:
(HTMLConverter::convert): Don't return early if m_dataSource is nil. This is already null
checked later and only needed in specific cases, it shouldn't fail the whole conversion.

Source/WebKit:

Caching the WKWebView was loading about:blank to unload the previous content.
This was causing subsequent rapid conversions to fail since the blank load
would be confused with the real content loading. Loading a blank page wasn't
really needed, it just helped keep the cached view in a cleaner state. Instead
of adding complexity to track the extra navigation, we can eliminate the blank load.
Ultimately a process swap will likely happen on the next navigation, and unused
cached views are closed quickly -- so stale content isn't held around too long.
This also avoids extra work and speeds up conversions a bit.

* UIProcess/API/Cocoa/NSAttributedString.mm:
(+[_WKAttributedStringWebViewCache cacheWebView:]): Don't load about:blank when caching.
* WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::getContentsAsAttributedString): Use rangeOfContents() for a fail
safe way to get the range needed.


Canonical link: https://commits.webkit.org/211686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244893 268f45cc-cd09-0410-ab3c-d52691b4dbfc